adding new line

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae ipsam amet dolor inventore fugit. Veritatis nulla quis qui molestias in architecto, adipisci omnis libero voluptatibus quae deserunt alias, delectus natus?</h1>
 </body>
 <script>
     const movies=[
